--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" role="doc-index">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,7 +28,7 @@
   </head>
   <body>
     <main role="main">
-      <section class="product-section">
+      <section class="product-section" role="article">
         <div class="card">
           <div class="card-header">
             <img
