--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </style>
   </head>
   <body>
-    <main role="main">
+    <main>
       <section class="product-section" aria-label="product section">
-        <div class="card" aria-label="product card">
+        <div class="card">
           <div class="card-header" aria-label="product header">
             <img
               src="./images/image-product-mobile.jpg"
@@ -40,37 +40,24 @@
               sizes="(min-width: 1440px)
       650px, 100vw"
               alt="image-product"
-              width="100%"
               aria-label="product image"
             />
           </div>
           <div class="card-body">
-            <p class="product-category" aria-label="perfume">Perfume</p>
-            <h1
-              class="product-title"
-              aria-label="Gabrielle Essence Eau De Parfum"
-            >
-              Gabrielle Essence Eau De Parfum
-            </h1>
-            <p
-              class="product-desc"
-              aria-label="A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-Creator for the House of CHANEL."
-            >
+            <p class="product-category">Perfume</p>
+            <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
+            <p class="product-desc">
               A floral, solar and voluptuous interpretation composed by Olivier
               Polge, Perfumer-Creator for the House of CHANEL.
             </p>
             <div class="flex align-items-center">
-              <h1 class="product-price" aria-label="product price">$149.99</h1>
-              <p class="product-discount" aria-label="product discount">
-                $169.99
-              </p>
+              <h1 class="product-price">$149.99</h1>
+              <p class="product-discount">$169.99</p>
             </div>
             <button class="product-button" aria-label="add to cart">
               <img
                 src="./images/icon-cart.svg"
                 alt="icon-cart"
-                width="fit-content"
                 class="icon-cart"
               />Add to Cart
             </button>
@@ -78,7 +65,7 @@
         </div>
       </section>
     </main>
-    <footer role="contentinfo">
+    <footer>
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
