fix html validation report

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
       <section class="product-section" aria-label="product section">
         <div class="card">
-          <div class="card-header" aria-label="product header">
+          <div class="card-header">
             <img
               src="./images/image-product-mobile.jpg"
               srcset="
