fix : practice best practice

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <img
             src="./images/image-product-mobile.jpg"
             srcset="
-              ./images/image-product-mobile.jpg   600w,
+              ./images/image-product-mobile.jpg   700w,
               ./images/image-product-desktop.jpg 1440w
             "
             sizes="(min-width: 1440px)
@@ -56,7 +56,8 @@
           <button class="product-button" aria-label="add to cart">
             <img
               src="./images/icon-cart.svg"
-              alt="icon-cart"
+              aria-hidden="true"
+              alt=""
               class="icon-cart"
             />Add to Cart
           </button>
