fix : practice best practice

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <div class="card">
         <div class="card-header">
           <img
-            src="./images/image-product-mobile.jpg"
+            src="./images/image-product-desktop.jpg"
             srcset="
-              ./images/image-product-mobile.jpg   700w,
-              ./images/image-product-desktop.jpg 1440w
+              ./images/image-product-desktop.jpg 1440w,
+              ./images/image-product-mobile.jpg   600w
             "
             sizes="(min-width: 1440px)
       650px, 100vw"
@@ -56,8 +56,9 @@
           <button class="product-button" aria-label="add to cart">
             <img
               src="./images/icon-cart.svg"
+              alt
               aria-hidden="true"
-              alt=""
+              width="fit-content"
               class="icon-cart"
             />Add to Cart
           </button>
