--- a/index.html
+++ b/index.html
@@ -1,76 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="./index.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-    <title>Frontend Mentor | Product preview card component</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="./index.css" />
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-  </head>
-  <body>
-    <main class="product-section" aria-label="product section">
-      <div class="card">
-        <div class="card-header">
-          <img
-            src="./images/image-product-desktop.jpg"
-            srcset="
+  <title>Frontend Mentor | Product preview card component</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+  </style>
+</head>
+
+<body>
+  <main class="product-section" aria-label="product section">
+    <div class="card">
+      <div class="card-header">
+        <img src="./images/image-product-desktop.jpg" srcset="
               ./images/image-product-desktop.jpg 1440w,
               ./images/image-product-mobile.jpg   600w
-            "
-            sizes="(min-width: 1440px)
-      650px, 100vw"
-            alt="image-product"
-            aria-label="product image"
-          />
-        </div>
-        <div class="card-body">
-          <p class="product-category">Perfume</p>
-          <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
-          <p class="product-desc">
-            A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-Creator for the House of CHANEL.
-          </p>
-          <div class="flex align-items-center">
-            <h1 class="product-price">$149.99</h1>
-            <p class="product-discount">$169.99</p>
-          </div>
-          <button class="product-button" aria-label="add to cart">
-            <img
-              src="./images/icon-cart.svg"
-              alt
-              aria-hidden="true"
-              class="icon-cart"
-            />Add to Cart
-          </button>
-        </div>
+            " sizes="(min-width: 1440px)
+      650px, 100vw" alt="image-product" aria-label="product image" />
       </div>
-    </main>
-    <footer>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/mikhael7">Mikhael</a>.
+      <div class="card-body">
+        <p class="product-category">Perfume</p>
+        <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
+        <p class="product-desc">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <div class="flex align-items-center">
+          <h1 class="product-price">$149.99</h1>
+          <p class="product-discount">$169.99</p>
+        </div>
+        <button class="product-button" aria-label="add to cart">
+          <img src="./images/icon-cart.svg" alt aria-hidden="true" class="icon-cart" />Add to Cart
+        </button>
       </div>
-    </footer>
-  </body>
+    </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. Coded by
+      <a href="https://github.com/mikhael7">Mikhael</a>.
+    </div>
+  </footer>
+</body>
+
 </html>
